--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Your Landing Page</title>
+    <title>Personal Portfolio</title>
 </head>
 
 <body>
-    <header>
-        <h1>Ayongezwa Ndamase - Software Engineer</h1>
-    </header>
+        <div class="header-container">
+            <div class="logo-section">
+              <img src="your-image.jpg" alt="Descriptive text">
+              <h4>Ayon</h4>
+            </div>
+            <div class="navigation">
+              <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>Comments</li>
+                <li>Contact</li>
+              </ul>
+            </div>
+            <h4>Log out</h4>
+          </div>
 
     <section>
         <h2>Ayongezwa Ndamase</h2>
