--- a/html/index.html
+++ b/html/index.html
@@ -8,41 +8,29 @@
 </head>
 
 <body>
-        <div class="header-container">
-            <div class="logo-section">
-              <img src="your-image.jpg" alt="Descriptive text">
-              <h4>Ayon</h4>
-            </div>
-            <div class="navigation">
-              <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Comments</li>
-                <li>Contact</li>
-              </ul>
-            </div>
-            <h4>Log out</h4>
-          </div>
+    <header>
 
-    <section>
-        <h2>Ayongezwa Ndamase</h2>
-        <p>Skilled Software Developer proficient in Javascript and C#</p>
-        <a href="#" class="cta-button">Get Started</a>
-    </section>
+    </header class="header-container">
+        <div class="logo-section">
+            <img src="your-image.jpg" alt="Descriptive text">
+            <h4>Ayon</h4>
+        </div>
+        <div class="navigation">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Portfolio</li>
+            <li>Comments</li>
+            <li>Contact</li>
+        </ul>
+        </div>
+            <h4>Log out</h4>
+        </div>
+    </header>
+
+    
 
     <section class="project-section">
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of Project 1.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of Project 2.</p>
-        </div>
-        <!-- Add more projects as needed -->
-    </section>
 
     <footer>
         <p>Contact us at info@example.com | Follow us on social media</p>
